[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "vendoring"
author = "Pradyun Gedam"
author-email = "pradyunsg@gmail.com"
home-page = "https://github.com/pradyunsg/vendoring"
description-file = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = [
  "click",
  "jsonschema",
  "toml",
  "requests",
  "packaging",
]
requires-python = "~= 3.8"

[tool.flit.metadata.requires-extra]
test = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
]
doc = ["sphinx"]

[tool.flit.scripts]
vendoring = "vendoring.cli:main"
