[build-system]
requires = ["flit_core >=3,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "vendoring"
authors = [
    {name = "Pradyun Gedam", email = "pradyunsg@gmail.com"},
]
dependencies = [
  "click",
  "rich",
  "jsonschema",
  "toml",
  "requests",
  "packaging",
]
requires-python = "~= 3.8"
readme = "README.md"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
]
doc = ["sphinx"]

[project.scripts]
vendoring = "vendoring.cli:main"

[project.urls]
Source = "https://github.com/pradyunsg/vendoring"
